--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,25 @@
             </ul>
         </nav>
     </header>
-
+    <section class="form-section">
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" name="name" id="name" required>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email">
+            <label for="message">Message:</label>
+            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    <footer>
+        <h4>NZR &copy; 2022</h4>
+        <ul>
+            <li><a href="#"><img src="./../icons/twitter 1.svg" alt="Twitter"></a></li>
+            <li><a href="#"><img src="./../icons/instagram 1.svg" alt="instagram"></a></li>
+            <li><a href="#"><img src="./../icons/youtube-symbol 1.svg" alt="youtube"></a></li>
+        </ul>
+    </footer>
 
     
 </body>
