--- a/index.html
+++ b/index.html
@@ -243,6 +243,13 @@
           <img src="./img/splash.svg" alt="splash" class="splash">
         </div>
     </section>
-    
+    <footer>
+      <h4>NZR &copy; 2022</h4>
+      <ul>
+          <li><a href="#"><img src="./../icons/twitter 1.svg" alt="Twitter"></a></li>
+          <li><a href="#"><img src="./../icons/instagram 1.svg" alt="instagram"></a></li>
+          <li><a href="#"><img src="./../icons/youtube-symbol 1.svg" alt="youtube"></a></li>
+      </ul>
+  </footer>
 </body>
 </html>
