--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,14 @@
         <img src="./../img/elena-joy.jpg" alt="Photography">
       </div>
     </section>
-
+    <footer>
+      <h4>NZR &copy; 2022</h4>
+      <ul>
+          <li><a href="#"><img src="./../icons/twitter 1.svg" alt="Twitter"></a></li>
+          <li><a href="#"><img src="./../icons/instagram 1.svg" alt="instagram"></a></li>
+          <li><a href="#"><img src="./../icons/youtube-symbol 1.svg" alt="youtube"></a></li>
+      </ul>
+  </footer>
     
 </body>
 </html>
